force-app/main/default/objects/Apttus_Proposal__Proposal_Document_Output_Format__c/Apttus_Proposal__Proposal_Document_Output_Format__c.object-meta.xml
<CustomObject>
    <description>Holds default output format preferences by user profile and quote/proposal type for use in the quote/proposal document generation process.</description>
    <label>Proposal Document Output Format</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Document Output Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>