force-app/main/default/objects/Apttus_Proposal__Proposal_Document_Output_Format__c/fields/Apttus_Proposal__Allow_Override__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Allow_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user is allowed to override the default output format during the quote/proposal document generation process.</description>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>