force-app/main/default/objects/Apttus_Proposal__Proposal_Document_Output_Format__c/fields/Apttus_Proposal__AllowOverrideWatermark__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__AllowOverrideWatermark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user is allowed to override the default watermark setting during the quote/proposal document generation process.</description>
    <label>Allow Override (Watermark)</label>
    <type>Checkbox</type>
</CustomField>