force-app/main/default/objects/Apttus_Proposal__Proposal_Document_Output_Format__c/fields/Apttus_Proposal__IncludeWatermark__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__IncludeWatermark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether watermark will be added to the document</description>
    <label>Include Watermark</label>
    <type>Checkbox</type>
</CustomField>