force-app/main/default/objects/Apttus_Proposal__Proposal_Document_Output_Format__c/fields/Apttus_Proposal__Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Profile_Id__c</fullName>
    <description>The associated user profile</description>
    <label>Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>